force-app/main/default/objects/KLA_NameCredentialMapp__c/KLA_NameCredentialMapp__c.object-meta.xml
<CustomObject>
    <label>KLA_NameCredentialMapp</label>
    <nameField>
        <displayFormat>MAPP-{0000}</displayFormat>
        <label>KLA_NameCredentialMapp</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KLA_NameCredentialMapp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>