force-app/main/default/objects/KLA_NameCredentialMapp__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <type>AutoNumber</type>
</CustomField>