force-app/main/default/objects/KLA_NameCredentialMapp__c/fields/NameCredential__c.field-meta.xml
<CustomField>
    <fullName>NameCredential__c</fullName>
    <description>Select the name credential that should be used for the given Sales Channel.</description>
    <inlineHelpText>Pick one from the dropdown.</inlineHelpText>
    <label>NameCredential</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KlarnaAuth</fullName>
                <default>true</default>
                <label>KlarnaAuth</label>
            </value>
            <value>
                <fullName>KlarnaAuthSecond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>