force-app/main/default/objects/KLA_NameCredentialMapp__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Channel</label>
    <referenceTo>SalesChannel</referenceTo>
    <relationshipLabel>KLA_NameCredentialMapp</relationshipLabel>
    <relationshipName>KLA_NameCredentialMapp</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>